--- a/qa_wolf_take_home/package.json
+++ b/qa_wolf_take_home/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "playwright": "^1.39.0"
   },
